--- a/src/components/layout/index.module.css
+++ b/src/components/layout/index.module.css
@@ -3,34 +3,28 @@
 }
 
 .layout {
-  
+  background-color: #111;
 }
 
 .header {
   width: 100%;
-  height: 50vh;
-  padding: 20px;
-  min-height: 60px;
-  background: #333;
-  color: #fff;
-  display: flex;
-  font-family: monospace;
-  align-items: center;
-  justify-content: center;
+  padding: 24px;
+  background-color: #0a2d14;
+  border-bottom: 4px double #0f2;
+  color: #ddd;
   box-sizing: border-box;
 }
 
 .title {
+  color: #0a2d14;
   margin: 0;
-  line-height: 1.25;
-  font-size: 48px;
+  font-family: monospace;
+  font-size: 24px;
+  line-height: 1;
   text-align: center;
-}
-
-.content {
-  max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  margin: auto;
-  padding: 1%;
+  text-shadow:
+    1px 1px 0 #0f2,
+    -1px -1px 0 #0f2,
+    1px -1px 0 #0f2,
+    -1px 1px 0 #0f2;
 }
