--- a/src/components/pagination/index.module.css
+++ b/src/components/pagination/index.module.css
@@ -7,16 +7,17 @@
 
 .link,
 .button {
+  position: relative;
   width: 108px;
   padding: 14px 0;
-  border: 4px double #0f2;
-  background-color: #0a2d14;
+  border: 4px double #062;
+  background-color: #020;
   box-sizing: border-box;
   font-family: monospace;
   line-height: 1;
   font-size: 12px;
   font-weight: bold;
-  color: #0a2d14;
+  color: #020;
   text-shadow:
     1px 1px 0 #0f2,
     -1px -1px 0 #0f2,
@@ -27,12 +28,52 @@
   cursor: pointer;
 }
 
+.link:before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  z-index: 1;
+  width: 12px;
+  height: 12px;
+  border-top: 4px solid #0f2;
+  border-left: 4px solid #0f2;
+  border-bottom: 4px solid transparent;
+  border-right: 4px solid transparent;
+  transition: 0.4s;
+  pointer-events: none;
+}
+
+.link:after {
+  content: "";
+  position: absolute;
+  right: -4px;
+  bottom: -4px;
+  z-index: 1;
+  width: 12px;
+  height: 12px;
+  border-top: 4px solid transparent;
+  border-left: 4px solid transparent;
+  border-bottom: 4px solid #062;
+  border-right: 4px solid #062;
+  transition: 0.4s;
+  pointer-events: none;
+}
+
 .link:focus,
 .link:hover {
-  border-style: solid;
-  box-shadow: 0 0 12px 0 #0f2, inset 0 0 12px 0 #0f2;
   outline: none;
 }
+
+.link:focus:before,
+.link:hover:before,
+.link:focus:after,
+.link:hover:after {
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+}
+
 
 .button[disabled] {
   opacity: 0.2;
